--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ header{
     z-index: 1;
 }
 .header_name_page {
-    top: 90%;
+    top: 85.5dvh;
     width: 100vw;
     position: absolute;
     color: white;
@@ -67,7 +67,7 @@ header{
     transition: filter 1s;
 }
 
-.naver{
+/* .naver{
     height: 14%;
     min-height: 36px;
     width: 95%;
@@ -88,9 +88,9 @@ header{
     justify-content: center;
     align-items: center;
     box-shadow: 0px 3px 3px rgba(0, 0,0, 0.15), 0px 3px 3px rgba(0, 0,0, 0.15), 0px 3px 3px rgba(0, 0,0, 0.15), 0px 2px 2px rgba(0, 0,0, 0.15);
-}
+} */
 
-.p_naver{
+/* .p_naver{
     font-family: "Literata", serif;
     text-align: center;
     color: #000000;
@@ -98,7 +98,57 @@ header{
     width: 100px;
     height: 90%;
     margin-left: -5px;
+} */
+marquee {
+    height: 30px;
+    margin-bottom: 10px;
+    box-shadow: 0px 0px 10px 7px rgb(255 255 255);
 }
+    marquee a{
+    color: #000000;
+    text-decoration: none;
+    font-size: 4.5vw;
+    margin: 10px;
+    font-style: italic;
+    font-family: "Literata", serif;
+}
+
+.arrow-7 {
+    position: absolute;
+    top: 93dvh;
+    left: 48vw;
+    width: 19px;
+    height: 50px;
+  }
+  .arrow-7 span {
+    display: block;
+    width: 15px;
+    height: 15px;
+    border-bottom: 2px solid #ffffff;
+    border-right: 2px solid #ffffff;
+    transform: rotate(45deg);
+    margin: -8px 0;
+    animation: arrow-7 2s infinite;
+  }
+  .arrow-7 span:nth-child(2){
+    animation-delay: -0.2s;
+  }
+  .arrow-7 span:nth-child(3){
+    animation-delay: -0.4s;
+  }
+  @keyframes arrow-7 {
+    0%{
+        opacity: 0;
+        transform: translate(0,-10px) rotate(45deg);
+    }
+    50%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+        transform: translate(0,10px) rotate(45deg);
+    }
+  }
 
 /*  Burger menu  */
 
@@ -126,7 +176,7 @@ header{
     border-top: 1px solid #000000; 
 }
 .burger_a{
-    color: #1f1f1f;
+    color: #000000;
     text-decoration: none;
     font-size: 4.5vw;
     margin: 10px;
@@ -548,8 +598,8 @@ background: linear-gradient(142deg, rgba(0,0,0,0) 68%, rgba(255,255,255,1) 100%)
 
 }
 .swiper-slide-about {
-    margin-right: 20px;
-    margin-bottom: 30px;
+    margin-right: 30px;
+    margin-bottom: 20px;
     display: flex;
     flex-direction: column;
     align-items: end;
