--- a/style.css
+++ b/style.css
@@ -67,18 +67,17 @@ header{
     transition: filter 1s;
 }
 
-/* .naver{
-    height: 14%;
+.run-swiper {
+    height: 15%;
     min-height: 36px;
-    width: 95%;
+    width: 100vw;
     display: flex;
-    justify-content: space-around;
     margin-bottom: 5px;
 }
 
 .parallelogram {
-    width: 27vw;
-    height: 100%;
+    width: 28vw;
+    height: 90%;
     -webkit-transform: skew(-20deg);
         -moz-transform: skew(-20deg);
             -o-transform: skew(-20deg);
@@ -87,31 +86,18 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 7px;
     box-shadow: 0px 3px 3px rgba(0, 0,0, 0.15), 0px 3px 3px rgba(0, 0,0, 0.15), 0px 3px 3px rgba(0, 0,0, 0.15), 0px 2px 2px rgba(0, 0,0, 0.15);
-} */
+}
 
-/* .p_naver{
-    font-family: "Literata", serif;
+.p_naver{
     text-align: center;
     color: #000000;
-    font-size: 2.7vw;
+    font-size: 2.8vw;
     width: 100px;
     height: 90%;
-    margin-left: -5px;
-} */
-marquee {
-    height: 30px;
-    margin-bottom: 10px;
-    box-shadow: 0px 0px 10px 7px rgb(255 255 255);
 }
-    marquee a{
-    color: #000000;
-    text-decoration: none;
-    font-size: 4.5vw;
-    margin: 10px;
-    font-style: italic;
-    font-family: "Literata", serif;
-}
+
 
 .arrow-7 {
     position: absolute;
@@ -162,7 +148,7 @@ marquee {
     transition: 0.4s;
 }
 .burger_menu{  
-    top: 50px;
+    top: 70px;
     background-color: rgba(255, 255, 255, 0.7);
     height: 100dvh;
     width: 100vw;
@@ -174,6 +160,7 @@ marquee {
     transition: 0.6s;
     z-index: 10;
     border-top: 1px solid #000000; 
+    overflow-y: scroll;
 }
 .burger_a{
     color: #000000;
@@ -576,13 +563,12 @@ footer{
 
 /* background: rgb(0,0,0);
 background: linear-gradient(142deg, rgba(0,0,0,0) 68%, rgba(255,255,255,1) 100%); */
-.swiper {
+.swiper-main {
     width: 100vw;
     height: 100dvh;
 }
 
-.swiper-slide {
-    background-color: rgb(107, 107, 107);
+.swiper-slide-main {
     width: 100%;
     height: 100%;
     background-size: cover;
@@ -614,3 +600,5 @@ background: linear-gradient(142deg, rgba(0,0,0,0) 68%, rgba(255,255,255,1) 100%)
     font-style: italic;
     text-decoration: underline;
 }
+
+
