--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Literata:ital,opsz,wght@0,7..72,200..900;1,7..72,200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
+
 
 body{
     background-color: #ffffff;
     margin:0;
-    font-family: "Literata", serif;
+    font-family: 'Manrope', sans-serif;
     font-size: 3.7vw;
 }
 
@@ -86,14 +87,14 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 7px;
+    margin-left: 10px;
     box-shadow: 0px 3px 3px rgba(0, 0,0, 0.15), 0px 3px 3px rgba(0, 0,0, 0.15), 0px 3px 3px rgba(0, 0,0, 0.15), 0px 2px 2px rgba(0, 0,0, 0.15);
 }
 
 .p_naver{
     text-align: center;
     color: #000000;
-    font-size: 2.8vw;
+    font-size: 2.9vw;
     width: 100px;
     height: 90%;
 }
@@ -168,14 +169,14 @@ header{
     font-size: 4.5vw;
     margin: 10px;
     font-style: italic;
-    font-family: "Literata", serif;
+    font-family: 'Manrope', sans-serif;
 }
 .bigger_burger_a{
     color: #000000;
     text-decoration: none;
     font-size: 5vw;
     margin: 0;
-    font-family: "Literata", serif;
+    font-family: 'Manrope', sans-serif;
     font-style: italic;
     display: flex;
     justify-content: center;
@@ -214,7 +215,7 @@ main{
 a {text-decoration: none;}
 
 h1{
-    font-family: "Literata", serif;
+    font-family: 'Manrope', sans-serif;
     font-size: 7vw;
     font-style: italic;
     text-align: center;
