--- a/style.css
+++ b/style.css
@@ -90,6 +90,9 @@ header{
     margin-left: 10px;
     box-shadow: 0px 3px 3px rgba(0, 0,0, 0.15), 0px 3px 3px rgba(0, 0,0, 0.15), 0px 3px 3px rgba(0, 0,0, 0.15), 0px 2px 2px rgba(0, 0,0, 0.15);
 }
+.parallelogram:active{
+    background-color: #E0E0E0;
+}
 
 .p_naver{
     text-align: center;
@@ -137,6 +140,7 @@ header{
         transform: translate(0,10px) rotate(45deg);
     }
   }
+
 
 /*  Burger menu  */
 
@@ -213,8 +217,13 @@ main{
     min-width: 0;
 }
 
-a {text-decoration: none;}
-
+a {
+    text-decoration: none; 
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+a:active {
+    color: #979797;
+}
 h1{
     font-family: 'Manrope', sans-serif;
     font-size: 7vw;
@@ -245,7 +254,7 @@ h4{
     width: 82%;
     height: 0.5px;
     background-color: black;
-
+    margin: 0 auto;
 }
 
 .line_small {
@@ -262,7 +271,7 @@ h4{
     height: 10vw;
     max-width: 50px;
     max-height: 50px;
-    background-color: #ffcfbd00;
+    background-color: #00000000;
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -270,8 +279,8 @@ h4{
     position: fixed;
     bottom: 1%;
     right: 2%;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.0);
-    transition: background-color 2s;
+    box-shadow: 0px 0px 10px 0px rgba(255, 255, 255, 0.0);
+    transition: background-color 2s box-shadow 2s;
     transform: translateX(14vw);
 }
 .imgToTop{
@@ -543,11 +552,18 @@ footer{
     background-color: #ffffff;
 }
 .nav_card_menu{
-    height: 40px;
+    top: 0; 
+    position: fixed; 
+    transition: height 1s, background-color 1s; 
     width: 100vw;
+    height: 50px; 
+    min-height: 50px; 
+    background-color: rgba(255, 255, 255, 0.92); 
+    flex-direction: row; 
+    justify-content: space-around;
     display: flex;
-    justify-content: center;
     align-items: center;
+    z-index: 990;
 }
 .nav_card_menu_text{
     height: 100%;
@@ -557,14 +573,12 @@ footer{
     align-items: center;
 }
 .back_img{
-    width: 18px;
+    width: 25px;
 }
 /*________________________INDEX________________________*/
 
 /*..........Slider.........*/
 
-/* background: rgb(0,0,0);
-background: linear-gradient(142deg, rgba(0,0,0,0) 68%, rgba(255,255,255,1) 100%); */
 .swiper-main {
     width: 100vw;
     height: 100dvh;
@@ -603,4 +617,105 @@ background: linear-gradient(142deg, rgba(0,0,0,0) 68%, rgba(255,255,255,1) 100%)
     text-decoration: underline;
 }
 
+/*________________________SECTION________________________*/
 
+
+.section_form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 75vw;
+    margin: 20px 0px 30px 0px;
+}
+
+.section_form input {
+    border-bottom: 1px rgb(0, 0, 0) solid;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    background-color: rgba(0, 0, 0, 0.0);
+    height: 24px;
+    width: 100%;
+    font-size: 3.7vw;
+    margin-bottom: 15px;
+    transition: 0.5s;
+}
+.section_form input:focus {
+    outline: none;
+}
+.section_form button {
+    border: none;
+    background: linear-gradient(to right, #ffc6b1, 40%, #E0E0E0);
+    border-radius: 0px 0px 10vw 10vw;
+    background-color: rgba(0, 0, 0, 0);
+    font-size: 4vw;
+    color: white;
+    width: 100%;
+    height: 30px;
+
+}
+.label_div{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 15px;
+    width: 100%;
+}
+#error-text {
+    color: #ffab8d;
+    font-size: 3vw;
+    display: none;
+    margin-top: -15px;
+}
+
+/*__popup__*/
+
+.popup {
+    position: fixed;
+    width: 100vw;
+    height: 100dvh;
+    background-color: rgba(0, 0, 0, 0.5);
+    top: 0;
+    left: 0;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.8s ease 0s;
+}
+
+.popup-body {
+    min-height: 100%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
+.popup-content {
+    background-color: white;
+    max-width: 80vw;
+    margin-bottom: 30px;
+    text-align: center;
+    border-radius: 7vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    transition: all 0.8s ease 0s;
+    opacity: 0;
+    transform: perspective(40vw) translate(0px, 100%) rotateX(45deg);
+}
+
+.popup-text {
+    max-width: 80%;
+}
+
+.popup-button {
+    width: 10vw;
+    height: 8.5vw;
+    border-radius: 2vw;
+    border: none;
+    background-color: #ffab8d;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px auto 20px auto;
+
+}
